--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
     "aws-amplify": "^4.3.21",
+    "aws-sdk": "^2.1139.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "react": "^18.1.0",
+    "react-csv": "^2.2.2",
     "react-dom": "^18.1.0",
     "react-hook-form": "^7.31.1",
     "react-redux": "^8.0.1",
