--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "react": "^18.1.0",
     "react-csv": "^2.2.2",
     "react-dom": "^18.1.0",
+    "react-file-drop": "^3.1.4",
     "react-hook-form": "^7.31.1",
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
+    "util": "^0.12.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
