--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "react": "^18.1.0",
+    "react-alert": "^7.0.3",
+    "react-alert-template-basic": "^1.0.2",
     "react-dom": "^18.1.0",
     "react-hook-form": "^7.31.1",
     "react-redux": "^8.0.1",
