--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
   "dependencies": {
     "@aws-amplify/ui-components": "^1.9.6",
     "@aws-amplify/ui-react": "^2.17.0",
+    "@aws-sdk/client-s3": "^3.100.0",
+    "@aws-sdk/lib-storage": "^3.100.0",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.6.2",
+    "@mui/lab": "^5.0.0-alpha.84",
     "@mui/material": "^5.7.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
