--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@aws-amplify/ui-react": "^2.17.0",
     "@aws-sdk/client-s3": "^3.100.0",
     "@aws-sdk/lib-storage": "^3.100.0",
+    "@blueprintjs/core": "^4.5.1",
+    "@blueprintjs/icons": "^4.3.0",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.6.2",
@@ -47,7 +49,6 @@
       "react-app/jest"
     ]
   },
-  
   "browserslist": {
     "production": [
       ">0.2%",
