--- a/package.json
+++ b/package.json
@@ -32,8 +32,10 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
     "react-select": "^5.3.2",
+    "react-table": "^7.8.0",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
+    "styled-components": "^5.3.5",
     "util": "^0.12.4",
     "web-vitals": "^2.1.4"
   },
