--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "match-sorter": "^6.3.1",
+    "prop-types": "^15.8.1",
     "react": "^18.1.0",
     "react-alert": "^7.0.3",
     "react-alert-template-basic": "^1.0.2",
