--- a/package.json
+++ b/package.json
@@ -28,10 +28,11 @@
     "aws-sdk": "^2.1139.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
-    "lodash": "^4.17.21",
-    "match-sorter": "^6.3.1",
     "gl-matrix": "^3.4.3",
+    "lodash": "^4.17.21",
     "mapbox-gl": "^2.9.1",
+    "match-sorter": "^6.3.1",
+    "papaparse": "^5.3.2",
     "prop-types": "^15.8.1",
     "react": "^18.1.0",
     "react-alert": "^7.0.3",
