--- a/package.json
+++ b/package.json
@@ -24,6 +24,11 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^28.1.5",
+    "@types/node": "^18.0.4",
+    "@types/react": "^18.0.15",
+    "@types/react-dom": "^18.0.6",
+    "@typescript-eslint/parser": "^5.30.6",
     "aws-amplify": "^4.3.21",
     "aws-sdk": "^2.1139.0",
     "axios": "^0.27.2",
@@ -41,6 +46,7 @@
     "react-dom": "^18.1.0",
     "react-file-drop": "^3.1.4",
     "react-hook-form": "^7.31.1",
+    "react-papaparse": "^4.0.2",
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
@@ -49,6 +55,7 @@
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
     "styled-components": "^5.3.5",
+    "typescript": "^4.7.4",
     "util": "^0.12.4",
     "web-vitals": "^2.1.4"
   },
@@ -77,6 +84,7 @@
     ]
   },
   "devDependencies": {
+    "eslint": "^8.19.0",
     "prettier": "^2.6.2",
     "redux-devtools-extension": "^2.13.9"
   }
