Added env variable for different environments

--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,9 @@
 .DS_Store
 .env
 .env.local
+.env.test
+.env.production
+.env.development
 .env.development.local
 .env.test.local
 .env.production.local
