--- a/package.json
+++ b/package.json
@@ -57,7 +57,8 @@
     "styled-components": "^5.3.5",
     "typescript": "^4.7.4",
     "util": "^0.12.4",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start",
