--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "aws-sdk": "^2.1139.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
+    "classnames": "^2.3.1",
     "gl-matrix": "^3.4.3",
     "lodash": "^4.17.21",
     "mapbox-gl": "^2.9.1",
