--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-scripts": "^5.0.1",
     "react-select": "^5.3.2",
     "react-table": "^7.8.0",
+    "react-table-filter": "^2.0.2",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
     "styled-components": "^5.3.5",
