--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@blueprintjs/icons": "^4.4.1",
     "@blueprintjs/popover2": "^1.6.2",
     "@fortawesome/fontawesome-free": "^6.1.2",
+    "@fortawesome/fontawesome-svg-core": "^6.1.2",
     "@fortawesome/free-solid-svg-icons": "^6.1.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@reduxjs/toolkit": "^1.8.5",
