--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
   "dependencies": {
     "@aws-sdk/lib-storage": "^3.157.0",
     "@blueprintjs/core": "^4.9.2",
+    "@blueprintjs/datetime": "^4.3.12",
+    "@blueprintjs/datetime2": "^0.6.1",
     "@blueprintjs/icons": "^4.4.1",
     "@blueprintjs/popover2": "^1.6.2",
+    "@blueprintjs/select": "^4.6.6",
     "@fortawesome/fontawesome-free": "^6.1.2",
     "@fortawesome/fontawesome-svg-core": "^6.1.2",
     "@fortawesome/free-solid-svg-icons": "^6.1.2",
