update unipe logo and related assets

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,7 +3,7 @@
   "name": "Unipe App",
   "icons": [
     {
-      "src": "logo_small_green.png",
+      "src": "logo_icon.png",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     }
