--- a/package.json
+++ b/package.json
@@ -10,15 +10,20 @@
     "@blueprintjs/icons": "^4.4.1",
     "@blueprintjs/popover2": "^1.6.2",
     "@blueprintjs/select": "^4.6.6",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@fortawesome/fontawesome-free": "^6.1.2",
     "@fortawesome/fontawesome-svg-core": "^6.1.2",
     "@fortawesome/free-solid-svg-icons": "^6.1.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@heroicons/react": "^2.0.18",
+    "@material-tailwind/react": "^2.1.1",
     "@reduxjs/toolkit": "^1.8.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "aws-amplify": "^4.3.33",
+    "framer-motion": "^10.16.4",
     "match-sorter": "^6.3.1",
     "md5": "^2.3.0",
     "papaparse": "^5.3.2",
@@ -67,6 +72,7 @@
   "devDependencies": {
     "@redux-devtools/extension": "^3.2.3",
     "eslint": "^8.19.0",
-    "prettier": "^2.6.2"
+    "prettier": "^2.6.2",
+    "tailwindcss": "^3.3.3"
   }
 }
