--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-csv": "^2.2.2",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.34.2",
+    "react-otp-input": "^3.1.0",
     "react-perfect-scrollbar": "^1.5.8",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
